src/k8s/sonarqube/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar
  namespace: sonar
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
#  tls:
#    - hosts:
#        - sonarqube.groep5.k8s.devops.aimsites.nl
#      secretName: my-fancy-certs
  rules:
    - host: sonarqube.groep5.k8s.devops.aimsites.nl
      http:
        paths:
          - path: /
            pathType: Prefix  # Verplicht in nieuwe Ingress-configuraties
            backend:
              service:
                name: sonar-svc  # Gebruik hier de juiste servicenaam
                port:
                  number: 9000    # Gebruik de poort in het nieuwe formaat
